--- a/src/components/pages/portfolio.css
+++ b/src/components/pages/portfolio.css
@@ -3,7 +3,6 @@
   margin: 0 auto;
   text-align: center;
   height: 90%;
-  margin-bottom: 50px;
 }
 .main-col {
   max-height: 95%;
@@ -21,7 +20,6 @@ h1 {
   display: flex;
   flex-wrap: row;
 }
-
 .projects-col {
   padding: 0;
 }
@@ -114,11 +112,4 @@ h1 {
   max-height: 7rem;
   overflow-y: scroll;
   margin: 0 auto;
-}
-/* .github-link {
-  color: navy;
-} */
-.github-link:hover {
-  text-decoration: none;
-  color: rgb(161, 5, 8);
 }
